assets/styles/_global.scss
html {
  height: 100vh;
}

body {
  @extend .d-flex;
  @extend .flex-column;

  min-height: 100vh;
}

p {
  &:last-child {
    margin-bottom: 0;
  }
}

.btn {
  text-transform: uppercase;
}

.btn-cta {
  padding: $btn-padding-y-sm $btn-padding-x-sm;

  @include media-breakpoint-up(sm) {
    padding: $btn-padding-y $btn-padding-x;
  }
}

.ls-outside {
  list-style: outside;
}

.list-group {
  p {
    line-height: 1.15rem;
    font-weight: 300;
  }
}

.text-gray {
  color: $gray-700;
}

.text-light-gray {
  color: rgba($black, 0.58);
}

.mw-325 {
  max-width: 325px;
}

.mw-500 {
  @include media-breakpoint-up(sm) {
    max-width: 500px;
  }
}

.mw-575 {
  @include media-breakpoint-up(lg) {
    max-width: 575px;
  }
}

.list-group-img {
  object-fit: cover;
  height: 70px;
  width: 70px;

  @include media-breakpoint-up(md) {
    height: 133px;
    width: 133px;
  }
}

.img-cover {
  object-fit: cover;
  height: 100%;
  width: 100%;
}

.img-contain {
  object-fit: contain;
  height: 100%;
  width: 100%;
}

.img-supporting {
  object-fit: contain;
  max-height: 433px;
  height: auto;
  width: 100%;
  overflow: hidden;

  @media (max-height: 800px) and (hover: none) {
    object-fit: cover;
    max-height: 90vh;
    width: 100%;
    overflow: hidden;
  }
}

.text-shadow {
  text-shadow: 2px 2px 6px $black, -2px -2px 6px $black;
}

